# ouestcharlie-whitebeard

./: .gitignore  README.md  profile_indexing_2020_2020-03_Romane-est-arrivee.txt  pyproject.toml  whitebeard_LLD.md
.claude/: CLAUDE.md
.github/workflows/: _build.yml  build.yml  publish.yml
profiling/: profile_indexing.py
src/whitebeard/: __init__.py  __main__.py  agent.py  indexer.py
tests/: test_indexer.py
