[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitebeard"
version = "0.1.0"
description = "OuEstCharlie Whitebeard — photo indexer agent for local drives"
requires-python = ">=3.11"
dependencies = [
    "ouestcharlie-toolkit",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
ouestcharlie-toolkit = { path = "../ouestcharlie-py-toolkit", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/whitebeard"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
tmp_path_retention_policy = "none"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
