[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouestcharlie-whitebeard"
version = "0.6.0"
description = "OuEstCharlie Whitebeard — photo indexer agent for local drives"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    { name = "Antoine Hue" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.27.0",
    "ouestcharlie-py-toolkit>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/ouestcharlie/ouestcharlie-whitebeard"
Issues = "https://github.com/ouestcharlie/ouestcharlie-whitebeard/issues"

[project.scripts]
whitebeard = "whitebeard.__main__:main"

[tool.uv.sources]
ouestcharlie-py-toolkit = { path = "../ouestcharlie-py-toolkit", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/whitebeard"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
tmp_path_retention_policy = "none"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/whitebeard/__main__.py" = ["E402"]  # logging must be configured before whitebeard modules are imported

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mcp[cli]>=1.27.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]
